update letter images

--- a/screen2.css
+++ b/screen2.css
@@ -9,6 +9,8 @@
     position: absolute;
     background-color: lightcoral;
     cursor: pointer;
+    object-fit: cover;
+    object-position: center;
 }
 
 .letter.video {
