feat: integrate screen

--- a/screen2.css
+++ b/screen2.css
@@ -1,8 +1,11 @@
 .screen-2 {
-    background-color: black;
+    background-color: transparent;
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
+    display: none;
 }
 
 .letter {
